# dotfiles

./: Brewfile  CLAUDE.md  README.md  brown-theme.md  dev-setup-optimization-plan.md  setup.sh  zsh-improvement-plan.md
.claude/: settings.local.json
.sageox/: .repo_019d0840-03a9-7714-9e41-c81062846ba7  README.md  config.json
brain-os/: depthfirst-ai-production-security.md  genie-code-data-work.md
ccs/: Cargo.toml
ccs/src/: cli.rs  colors.rs  main.rs  tmux.rs
claude-code/: .claude.json  CLAUDE.md  keybindings.json  mcp.json  mcp.json.template  settings.json  settings.local.json  statusline-command.sh
claude-code/agents/: learnings-capturer.md  mesa-setup.md  pr-monitor.md  recall-quiz.md
claude-code/commands/: gt-sync.md  learn.md
claude-code/hooks/: airplane-seatbelt.aiff  airplane-seatbelt.sh  auto-format.sh  brain-os-capture.py  brain-os-context.py  branch-guard.py  git-guard.py  (+9 more)
claude-code/scripts/dork/: dork.toml  pyproject.toml
claude-code/scripts/dork/dork/: __main__.py  config.py  fetch.py  models.py  store.py
claude-code/scripts/dork/dork/sources/: arxiv.py  freshrss.py  hf_papers.py
claude-code/scripts/dork/dork_fetcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ghostty/: config
learning-machine/: README.md  SKILL.md  run-daily.sh  secrets.env.template  validate-index.md
raycast/: Raycast 2026-03-14 15.50.40.rayconfig
scripts/: brew-sync.sh  com.dotfiles.brew-sync.plist  com.dotfiles.brew-sync.plist.template  vps-bootstrap.sh
tmux/: plan.md  tmux.conf
zsh/: zprofile  zsh_secrets.template  zshenv  zshrc
(+27 files in other folders)
