[project]
name = "dork-fetcher"
version = "0.1.0"
description = "Slim fetcher for the Learning Machine knowledge pipeline"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tomli>=2.0.0",
]

[project.scripts]
dork = "dork.__main__:cli"
